[package]
name = "keryx-inference"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

description = "OPoI (Optimistic Proof of Inference) — synthetic MLP engine for Keryx miners"

[dependencies]
candle-core = { version = "0.9", default-features = false }
hex = { workspace = true }
thiserror = { workspace = true }
