[package]
name = "keryx-pow"
description = "Kaspa proof-of-work"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
wasm32-sdk = []

[dependencies]
js-sys.workspace = true
keryx-consensus-core.workspace = true
keryx-consensus-client.workspace = true
keryx-hashes.workspace = true
keryx-math.workspace = true
keryx-utils.workspace = true
wasm-bindgen.workspace = true
workflow-wasm.workspace = true
num.workspace = true
rayon.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bin]]
name = "mine-genesis"
path = "src/bin/mine_genesis.rs"

[[bench]]
name = "bench"
harness = false

[lints]
workspace = true
